# clypper

./: .gitignore  Cargo.toml  README.md
clypper-gui/: Cargo.toml
clypper-gui/src/: main.rs
clypperlib/: Cargo.toml  build  run
clypperlib/src/: lib.rs
clypperlib/src/download/: downloader.rs  ffmpeg.rs  mod.rs
clypperlib/src/extract/: extractor.rs
